# musical-palm-tree

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DevelopmentProgress.md  LICENSE  QUICKSTART.md  README.md  data.json  index.js
.github/workflows/: main.yml
anchor/: Anchor.toml  package.json  tsconfig.json
anchor/migrations/: deploy.ts
anchor/programs/prompt-vault/: Cargo.toml
anchor/programs/prompt-vault/src/: errors.rs  lib.rs  utils.rs
anchor/programs/prompt-vault/src/instructions/: claim_rewards.rs  create_version.rs  emergency_pause.rs  fork_prompt.rs  initialize.rs  mod.rs  record_execution.rs  register_prompt.rs  resume_operations.rs  stake_for_ranking.rs  transfer_ownership.rs  unstake.rs  update_license.rs  update_metadata.rs  update_status.rs
anchor/programs/prompt-vault/src/state/: execution_record.rs  mod.rs  prompt_data.rs  stake_account.rs  vault_state.rs
anchor/tests/: prompt-vault.ts
img/: readme.md
utils/: README.md  particleAnimation.test.js  particleAnimation.ts  particles.ts  scrollAnimation.js  simpleParticles.js
