[workspace]
members = [
    "anchor/programs/prompt-vault",
    "anchor/programs/prompt-token", 
    "anchor/programs/prompt-nft",
    "anchor/programs/prompt-dao",
    "anchor/programs/prompt-sig",
    "anchor/programs/prompt-router"
]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
mpl-token-metadata = "3.2.0"
borsh = "0.10.3"
sha2 = "0.10.8"
bs58 = "0.5.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
